Remove examples from project