@@ -22,9 +22,202 @@ Targets:
 
 - JNI desktop runtime
 - FFM desktop runtime
-- TeaVM C desktop runtime bootstrap (Windows x64 WGPU)
+- TeaVM C desktop runtime
 - TeaVM/WebAssembly web runtime
 - Android JNI runtime
+
+## Quickstart: desktop JNI (release 0.3.4)
+
+Use published dependencies to add jWebGPU to an application. A native compiler or a checkout of this repository is not required. The [source build commands](#building-jwebgpu-from-source) are for developing the bindings themselves.
+
+This example uses **JDK 25, Windows x64 and WGPU**. It creates and releases a native WebGPU instance; it does not open a window. For rendering examples, see [Run Demos](#run-demos).
+
+In a Gradle project with a wrapper, create `settings.gradle.kts`:
+
+```kotlin
+rootProject.name = "webgpu-hello"
+```
+
+Create `build.gradle.kts`:
+
+```kotlin
+plugins {
+    application
+}
+
+repositories {
+    mavenCentral()
+}
+
+val webgpuVersion = "0.3.4"
+
+dependencies {
+    implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-jni:$webgpuVersion")
+    runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-jni-wgpu_windows_x64:$webgpuVersion")
+}
+
+application {
+    mainClass.set("WebGPUHello")
+    applicationDefaultJvmArgs = listOf("--enable-native-access=ALL-UNNAMED")
+}
+```
+
+Create `src/main/java/WebGPUHello.java`:
+
+```java
+import com.github.xpenatan.webgpu.JWebGPULoader;
+import com.github.xpenatan.webgpu.WGPU;
+import com.github.xpenatan.webgpu.WGPUInstance;
+
+public class WebGPUHello {
+    public static void main(String[] args) {
+        JWebGPULoader.init((success, error) -> {
+            if (!success) {
+                System.err.println("Could not load jWebGPU");
+                if (error != null) error.printStackTrace();
+                return;
+            }
+
+            WGPUInstance instance = WGPU.setupInstance();
+            if (instance == null || !instance.isValid()) {
+                System.err.println("Could not create a WebGPU instance");
+                return;
+            }
+            try {
+                System.out.println("WebGPU instance created");
+            } finally {
+                instance.release();
+            }
+        });
+    }
+}
+```
+
+Run from that application's root:
+
+```powershell
+.\gradlew.bat run
+```
+
+Expected output: `WebGPU instance created`. Initialize through `JWebGPULoader` and wait for the successful callback before creating WebGPU objects. Creating an instance alone does not verify adapter/device creation or rendering support.
+
+### Why `webgpu-core` is not an application runtime
+
+**Do not add `webgpu-core` as `implementation` or `runtimeOnly` to JNI, FFM or Android applications.** It contains API stubs with the same class names as the working implementations. If those stubs load first, calls such as `WGPU.setupInstance()` can return `null` even after native loading succeeds. Earlier README installation instructions incorrectly combined core and JNI this way; the quickstart above corrects that for 0.3.4.
+
+A shared source module using the `java-library` plugin can compile against the portable API:
+
+```kotlin
+dependencies {
+    compileOnlyApi("com.github.xpenatan.jWebGPU:webgpu-core:0.3.4")
+}
+```
+
+Each executable then supplies its platform runtime. For a single module, use `compileOnly` if you need the core API on the compile classpath. JNI already exposes the API through its dependencies. TeaVM web and C intentionally bring core transitively: their compiler replaces the stubs with platform implementations.
+
+## Other Platforms and Backends
+
+Keep all jWebGPU dependencies on the same version. The following snippets use `val webgpuVersion = "0.3.4"` and replace the quickstart's dependency block; choose one runtime per executable.
+
+### Desktop native artifact names
+
+The Java runtime and the native payload are separate artifacts. Choose the suffix matching the **JVM architecture**:
+
+| Platform | Suffix |
+| --- | --- |
+| Windows x64 | `windows_x64` |
+| Linux x64 | `linux_x64` |
+| macOS Intel | `mac_x64` |
+| macOS Apple Silicon | `mac_arm64` |
+
+For JNI use `webgpu-desktop-jni-{backend}_{suffix}`; for FFM use `webgpu-desktop-ffm-{backend}_{suffix}`. `{backend}` is `wgpu` or `dawn`. These are artifact IDs, not Maven classifiers. Add the selected payload with `runtimeOnly`.
+
+To use Dawn, select its native artifact and initialize with `JWebGPULoader.init(JWebGPUBackend.DAWN, listener)` (import `com.github.xpenatan.webgpu.JWebGPUBackend`). The overload in the quickstart defaults to WGPU. This loader choice selects the native WebGPU implementation; Vulkan, D3D12 and Metal are graphics backends within it.
+
+### Desktop FFM
+
+FFM requires **JDK 25** for these artifacts. Keep `--enable-native-access=ALL-UNNAMED` in the application JVM arguments.
+
+```kotlin
+dependencies {
+    compileOnly("com.github.xpenatan.jWebGPU:webgpu-core:$webgpuVersion")
+    implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-ffm:$webgpuVersion")
+    runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-ffm-wgpu_windows_x64:$webgpuVersion")
+}
+```
+
+The compile-only dependency exposes the API and its public dependency types while keeping the stubs out of the runtime. Use the same initialization example as JNI.
+
+### Android JNI
+
+In an Android application module, use Maven Central and Google repositories and set `minSdk` to **29 or later**:
+
+```kotlin
+dependencies {
+    implementation("com.github.xpenatan.jWebGPU:webgpu-android-wgpu:$webgpuVersion")
+}
+```
+
+For Dawn, replace the artifact with `webgpu-android-dawn` and select `JWebGPUBackend.DAWN` during loading. Choose exactly one backend AAR: both contain `libjWebGPU.so`. The AAR includes the native payloads and brings the JNI Java runtime transitively; desktop native JARs are not needed. See the standalone examples for Android surface and activity lifecycle handling.
+
+### TeaVM / browser
+
+Use a TeaVM application with **Java 17 or later** and both artifacts:
+
+```kotlin
+dependencies {
+    implementation("com.github.xpenatan.jWebGPU:webgpu-web:$webgpuVersion")
+    implementation("com.github.xpenatan.jWebGPU:webgpu-web_wasm:$webgpuVersion")
+}
+```
+
+`webgpu-web` supplies the Java API and TeaVM replacements; `webgpu-web_wasm` supplies `jWebGPU.js` and `jWebGPU.wasm`. Adding dependencies alone does not assemble a browser application: configure TeaVM and package the loader scripts and WASM resources as shown in the standalone examples. Serve the complete output over localhost or HTTPS in a browser with WebGPU support. The browser selects its graphics backend.
+
+### TeaVM C
+
+For a TeaVM C application, select one native backend/platform artifact:
+
+```kotlin
+dependencies {
+    implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-c-wgpu_windows_x64:$webgpuVersion")
+}
+```
+
+It includes `webgpu-c` and the jParser C runtime transitively. This target requires a TeaVM C build and native toolchain. See the [TeaVM C packaging details](#teavm-c-packaging) below for platforms and linkage choices.
+
+## Versions and Migration
+
+The quickstart is pinned to **0.3.4**. This branch can contain APIs and build changes that have not been released; consult the [0.3.4 source and README](https://github.com/xpenatan/jWebGPU/tree/0.3.4) when comparing release APIs, but use the corrected dependency scopes above.
+
+For development snapshots, set `webgpuVersion` to the literal `"-SNAPSHOT"` and add the snapshot repository alongside Maven Central:
+
+```kotlin
+repositories {
+    mavenCentral()
+    maven("https://central.sonatype.com/repository/maven-snapshots/")
+}
+```
+
+Use `--refresh-dependencies` when updating a cached snapshot. A checkout may be ahead of the published snapshot; changing the repository URL cannot make an unpublished API available.
+
+When moving from 0.1.x:
+
+- Replace the old `webgpu-desktop` dependency/classifiers with a JNI or FFM Java runtime and its matching native artifact listed above.
+- Keep `webgpu-core` compile-only in shared modules. Recheck the runtime classpath instead of relying on dependency order to select the right classes.
+- Use the initialization callback shown above and select the loader backend matching the packaged native payload.
+- In the current source tree, generator tasks use `:webgpu:builder:jParser_*`; the old `:webgpu:webgpu-build:*` paths no longer apply. Demos have moved to the standalone project, so `:demos:*` tasks no longer run from this checkout.
+
+### Troubleshooting installation
+
+| Symptom | Check |
+| --- | --- |
+| Native loading succeeds but `WGPU.setupInstance()` returns `null` | Remove `webgpu-core` from the JNI/FFM runtime classpath. Inspect it with `./gradlew dependencies --configuration runtimeClasspath`. |
+| Loader reports a missing native library | Include the native artifact for your OS/JVM architecture, align versions, and match WGPU/Dawn loading to the packaged backend. |
+| FFM fails with an unsupported class version | Run with JDK 25; inspect `./gradlew --version` as well as your IDE's run configuration. |
+| `setBackendType` is missing on `WGPUInstanceDescriptor` | This API was added after 0.3.4. Use a build containing that change or the release-compatible `WGPU.setupInstance()` quickstart. |
+| Old Gradle demo/build task cannot be found | Use the commands for your checked-out version; current demos run from jWebGPU-Examples. |
+
+If reporting another problem, include the jWebGPU version, dependency block, OS/architecture, JDK, and full error output.
 
 ## Project Structure
 
@@ -44,21 +237,15 @@ Library modules:
 - `:webgpu:web:wasm` - TeaVM/WebAssembly runtime packaging.
 - `:webgpu:android:jni` - WGPU/Dawn Android JNI runtime packaging.
 
-Demo modules:
+The runnable examples are maintained separately in **jWebGPU-Examples**.
 
-- `:demos:backend:core`
-- `:demos:backend:desktop`
-- `:demos:backend:web`
-- `:demos:backend:android`
-- `:demos:app:core`
-- `:demos:app:desktop-jni`
-- `:demos:app:desktop-ffm`
-- `:demos:app:web`
-- `:demos:app:android`
+## Building jWebGPU from Source
 
-## Build Commands
+Run these commands from the **jWebGPU library checkout**. Use JDK 25 for this build and install the target's native toolchain (MSVC on Windows, the appropriate compiler on Linux/macOS, Android SDK/NDK for Android, or Emscripten for web). The Gradle wrapper is included; use `./gradlew` on Linux/macOS.
 
 Download tasks are manual prerequisites for native builds. `jParser_build_*` tasks do not run them automatically.
+
+Despite its name, `webgpu_download_glfw_windows` supplies the shared GLFW headers used by the desktop builds, including Linux and macOS.
 
 Generate Java bindings:
 
@@ -75,6 +262,8 @@ Windows JNI/FFM:
 .\gradlew.bat :webgpu:builder:jParser_build_windows64_jni_wgpu :webgpu:builder:jParser_build_windows64_jni_dawn
 .\gradlew.bat :webgpu:builder:jParser_build_windows64_ffm_wgpu :webgpu:builder:jParser_build_windows64_ffm_dawn
 ```
+
+### TeaVM C packaging
 
 Desktop TeaVM C publishes one artifact per native backend and host platform:
 
@@ -112,6 +301,8 @@ Linux JNI/FFM:
 
 Linux TeaVM C:
 
+Run the Linux download prerequisites above first.
+
 ```bash
 ./gradlew :webgpu:builder:jParser_build_linux64_teavm_c_wgpu :webgpu:builder:jParser_build_linux64_teavm_c_dawn
 ./gradlew :webgpu:desktop:c:nativeJar_wgpu_linux_x64 :webgpu:desktop:c:nativeJar_dawn_linux_x64
@@ -130,6 +321,8 @@ macOS JNI/FFM:
 ```
 
 macOS TeaVM C:
+
+Run the macOS download prerequisites above first.
 
 ```bash
 ./gradlew :webgpu:builder:jParser_build_mac64_teavm_c_wgpu :webgpu:builder:jParser_build_mac64_teavm_c_dawn :webgpu:builder:jParser_build_macArm_teavm_c_wgpu :webgpu:builder:jParser_build_macArm_teavm_c_dawn
@@ -163,19 +356,25 @@ Native compiler policy is configured through jParser's generic target hooks. The
 
 ## Run Demos
 
+The examples now live in the standalone **jWebGPU-Examples** project. Open that project's root and follow its README for desktop JNI/FFM, Android and browser commands. The library build no longer includes `:demos:*` modules.
+
+For published dependencies, run from the examples root:
+
 ```powershell
-.\gradlew.bat :demos:app:desktop-jni:webgpu_demo_app_desktop_jni_wgpu_run
-.\gradlew.bat :demos:app:desktop-jni:webgpu_demo_app_desktop_jni_dawn_run
-.\gradlew.bat :demos:app:desktop-ffm:webgpu_demo_app_desktop_ffm_wgpu_run
-.\gradlew.bat :demos:app:desktop-ffm:webgpu_demo_app_desktop_ffm_dawn_run
-.\gradlew.bat :demos:app:web:webgpu_demo_app_web_run
-.\gradlew.bat :demos:app:android:installWgpuDebug
-.\gradlew.bat :demos:app:android:installDawnDebug
+.\gradlew.bat -PuseLocalJWebGPU=false :app:desktop-jni:webgpu_demo_app_desktop_jni_wgpu_run
 ```
+
+The current examples use APIs added after 0.3.4, including `WGPUInstanceDescriptor.setBackendType`. They need a published snapshot containing those APIs. Until that snapshot is available, place this library beside the examples as `../jWebGPU`, generate the bindings and build the selected native bridge using the source commands above, then run:
+
+```powershell
+.\gradlew.bat -PuseLocalJWebGPU=true :app:desktop-jni:webgpu_demo_app_desktop_jni_wgpu_run
+```
+
+The composite substitutes the Java libraries and their matching native payloads. `-PjWebGPUPath=E:/path/to/jWebGPU` overrides the sibling location. These instructions refer to the current source layout; the 0.3.4 tag still contains the older in-repository demos.
 
 ## Native startup fallback
 
-With the WGPU loader, restrict each startup attempt using the existing instance descriptor:
+**Source API added after 0.3.4:** the following requires a matching newer library build. It is not part of the release quickstart above. With the WGPU loader, restrict each startup attempt using the instance descriptor:
 
 ```java
 WGPUInstanceDescriptor descriptor = new WGPUInstanceDescriptor();
@@ -189,54 +388,13 @@ The instance setting controls which native backends may initialize surfaces; the
 an adapter within that instance. `Undefined` keeps the loader defaults. Explicit instance backend selection
 is supported by wgpu-native; Dawn and browser callers should keep `Undefined`.
 
-The shared demo `WGPUApp.init(backends...)` tries the supplied backends in order. Android demos use Vulkan,
-then OpenGLES; desktop WGPU demos use Vulkan, then D3D12 on Windows or OpenGL on Linux (Metal on macOS). A reported startup error releases
-the failed attempt before creating a fresh instance. The platform disposes partially created demo resources
-before retrying; `WGPUApp` owns the instance, adapter, device, queue and surface. Demo listeners must tolerate
-partial initialization in `dispose()` and support another `create()` call.
-
-Retries cover startup through the first rendered frame. Later errors stop the demo. A fatal native crash
-terminates the process, so these examples cannot retry it immediately and do not persist crash recovery.
-Browser demos use the browser-selected backend and do not choose Vulkan/GLES themselves.
+The standalone demos own their ordered startup retries and cleanup; see their README for platform fallback behavior. Native process crashes cannot be recovered by an in-process retry.
 
 ## Development Notes
 
 - Edit binding templates in `webgpu/base/src/main/java/**`.
 - Edit IDL and native glue in `webgpu/builder/src/main/cpp/**`.
 - Do not hand-edit generated Java under `webgpu/core`, `webgpu/shared/jni`, `webgpu/shared/c`, `webgpu/desktop/ffm`, or `webgpu/web/wasm`.
-
-## Installation
-
-Use group ID `com.github.xpenatan.jWebGPU`.
-
-```kotlin
-dependencies {
-    implementation("com.github.xpenatan.jWebGPU:webgpu-core:<version>")
-
-    // Desktop JNI: choose one backend native artifact for your platform.
-    implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-jni:<version>")
-    runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-jni-wgpu_windows_x64:<version>")
-    // runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-jni-dawn_windows_x64:<version>")
-
-    // Desktop FFM: choose one backend native artifact for your platform.
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-ffm:<version>")
-    // runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-ffm-wgpu_windows_x64:<version>")
-    // runtimeOnly("com.github.xpenatan.jWebGPU:webgpu-desktop-ffm-dawn_windows_x64:<version>")
-
-    // TeaVM C, Windows x64 WGPU: includes webgpu-c and the jParser C runtime transitively.
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-desktop-c-wgpu_windows_x64:<version>")
-
-    // TeaVM/WebAssembly requires both the Java runtime and WebAssembly payload.
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-web:<version>")
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-web_wasm:<version>")
-
-    // Android: choose exactly one backend AAR.
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-android-wgpu:<version>")
-    // implementation("com.github.xpenatan.jWebGPU:webgpu-android-dawn:<version>")
-}
-```
-
-Android backend AARs are mutually exclusive because both package `libjWebGPU.so`. Applications using `webgpu-android-dawn` must initialize with `JWebGPULoader.init(JWebGPUBackend.DAWN, listener)`; the overload without a backend keeps WGPU as its default.
 
 ## Ecosystem
 
